docs: 매일메일 GC 알고리즘·클라이언트 사이드 라우팅 정리